vcs/specs/parser/fail/generics/invalid_negative_bound.vr
// @test: parse-fail
// @level: L0
// @tags: parser, generics, negative, bound, error
// @description: Test invalid negative bound syntax
// @expected-error: E050

fn test<T: !>() {
    // Negative bound without protocol name
}
